mobile: fix snackbar text
This fixes regression introduced in:
commit b6c26bee914a39b803a1a1ae78dfaf9a280b131e
Mobile sidebar header layout #6861

- remove additional top border
- make line height regular so text will fit into snackbar
  without scrollbar

--- a/browser/css/mobilewizard.css
+++ b/browser/css/mobilewizard.css
@@ -754,6 +754,11 @@ a.leaflet-control-zoom-in {
 	clear: both;
 }
 
+#mobile-wizard.snackbar .mobile-wizard.ui-text {
+	border: none;
+	line-height: inherit;
+}
+
 #mobile-wizard [id^='info-modal-label'].mobile-wizard.ui-text {
 	border: none;
 	color: var(--color-text-dark) !important;
